[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/Source.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Tower.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/TestLvl.gd" type="Script" id=3]
[ext_resource path="res://scenes/Spawner.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/Bottom.tscn" type="PackedScene" id=7]

[node name="Level" type="Node2D"]
script = ExtResource( 3 )
enemies = [ 5, 3 ]

[node name="Source" parent="." instance=ExtResource( 1 )]
position = Vector2( 640, 512 )
collision_layer = 2
collision_mask = 4
max_energy = 15

[node name="Spawner" parent="." instance=ExtResource( 6 )]
position = Vector2( 640, 0 )

[node name="BlueTower" parent="." instance=ExtResource( 2 )]
position = Vector2( 800, 352 )

[node name="BlueTower2" parent="." instance=ExtResource( 2 )]
position = Vector2( 480, 352 )

[node name="Bottom" parent="." groups=[
"bottom",
] instance=ExtResource( 7 )]

[connection signal="energy_full" from="Source" to="." method="_on_Source_energy_full"]
[connection signal="get_source_health" from="Source" to="." method="_on_Source_get_source_health"]
[connection signal="enemies_spawned" from="Spawner" to="." method="_on_Spawner_enemies_spawned"]
[connection signal="waves_cleared" from="Spawner" to="." method="_on_Spawner_waves_cleared"]
